@@ -7,6 +7,8 @@
 
 #include <stdio.h>
 #include <stdlib.h>
+#include <string.h>
+#include <ctype.h>
 
 #include "ds_array.h"
 
@@ -15,9 +17,37 @@
    printf (__VA_ARGS__);\
 } while (0)
 
+static char *lstrdup (const char *s)
+{
+   char *ret = NULL;
+   size_t len = strlen (s) + 1;
+   if (!(ret = malloc (len))) {
+      return NULL;
+   }
+   strcpy (ret, s);
+   return ret;
+}
+
+static void *upcase (const void *element, void *param)
+{
+   (void)param;
+   char *newval = lstrdup ((const char *)element);
+   for (size_t i=0; newval[i]; i++) {
+      newval[i] = toupper(newval[i]);
+   }
+   return newval;
+}
+
+static bool match_string (const void *element, void *param)
+{
+   const char *el = element;
+   char *p = param;
+   return (strstr (el, p)) ? true : false;
+}
+
 static void print_string (void *arg, void *param)
 {
-   char *s = arg;
+   const char *s = arg;
    FILE *of = param;
    fprintf (of, "[%s:%i] ", __FILE__, __LINE__);\
    fprintf (of, "->[%s]\n", s);
@@ -43,6 +73,8 @@ int main (void)
    size_t el_len = sizeof elements / sizeof elements[0];
 
    ds_array_t *dsa = ds_array_new ();
+   ds_array_t *filtered = NULL;
+   ds_array_t *mapped = NULL;
 
    if (!dsa) {
       LOG_MSG ("Failed to create new array object\n");
@@ -60,6 +92,8 @@ int main (void)
       }
    }
 
+   LOG_MSG ("test: get ===================================\n");
+
    size_t dsa_len = ds_array_length (dsa);
    for (size_t i=0; i<dsa_len; i++) {
       // Note: Can also simply use "dsa[i]"
@@ -67,8 +101,7 @@ int main (void)
       LOG_MSG ("[%zu]:[%s]\n", i, string);
    }
 
-   LOG_MSG ("===================================\n");
-
+   LOG_MSG ("test: insert head ============================\n");
    for (size_t i=0; i<el_len; i++) {
       if (!(ds_array_ins_head (dsa, elements[i]))) {
          LOG_MSG ("Failed to insert head element [%zu]:[%s]\n",
@@ -95,7 +128,7 @@ int main (void)
    }
 
    ds_array_iterate (dsa, print_string, stdout);
-   LOG_MSG ("===================================\n");
+   LOG_MSG ("test: rm_head =====================\n");
 
    dsa_len = ds_array_length (dsa);
 
@@ -109,7 +142,22 @@ int main (void)
    }
 
    ds_array_iterate (dsa, print_string, stdout);
-   LOG_MSG ("===================================\n");
+   LOG_MSG ("test: rm ==========================\n");
+
+   if (!(filtered = ds_array_filter (dsa, match_string, "e"))) {
+      LOG_MSG ("Failed to filter elements matching 'e'\n");
+      goto errorexit;
+   }
+   ds_array_iterate (filtered, print_string, stdout);
+   LOG_MSG ("test: filter ======================\n");
+
+   if (!(mapped = ds_array_map (dsa, upcase, NULL))) {
+      LOG_MSG ("Failed to map elements to `upcase()`\n");
+      goto errorexit;
+   }
+   ds_array_iterate (mapped, print_string, stdout);
+   LOG_MSG ("test: map =========================\n");
+
 
    char *tmp;
 
@@ -117,6 +165,7 @@ int main (void)
       LOG_MSG ("[%s]\n", tmp);
    }
 
+   LOG_MSG ("test: rm ==========================\n");
    ret = EXIT_SUCCESS;
 
 errorexit:
@@ -124,6 +173,9 @@ errorexit:
    // Note: This releases all memory used in maintaining the array of
    // strings, it does not delete the strings themselves.
    ds_array_del (dsa);
+   ds_array_del (filtered);
+   ds_array_fptr (mapped, free);
+   ds_array_del (mapped);
 
    return ret;
 }
