@@ -3,6 +3,7 @@ Features
 1. Added stack_t datatype.
 2. Support for building on visual studio (2022).
 3. Added a set_t datatype.
+4. Adds array/filter and array/map and array/fptr functions.
 
 
 
